--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "framer-motion": "https://aistudiocdn.com/framer-motion@^12.23.24",
     "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
-    "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/"
+    "@heroicons/react/": "https://aistudiocdn.com/@heroicons/react@^2.2.0/",
+    "zustand": "https://aistudiocdn.com/zustand@^5.0.8"
   }
 }
 </script>
